small fixes and columns
