# swagger.json
@@ -143,6 +143,10 @@
                       "enum": ["light", "dark", "violet"],
                       "description": "User's theme",
                       "example": "dark"
+                    },
+                    "avatar": {
+                      "type": "string",
+                      "description": "User's avatar"
                     }
                   }
                 }
@@ -448,9 +452,9 @@
                         "description": "Board background(url/null)",
                         "example": null
                       },
-                      "owner": {
+                      "user": {
                         "type": "string",
-                        "description": "User's id who created this board (generated by backend)",
+                        "description": "User's id to whom this board refer (generated by backend)",
                         "example": "5f86793b8a7c4d2e"
                       }
                     }
@@ -581,7 +585,19 @@
         },
         "responses": {
           "200": {
-            "description": "Successful update"
+            "description": "Successful update",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "example": "Successful update"
+                    }
+                  }
+                }
+              }
+            }
           },
           "401": {
             "description": "Problem with Authorization missing header, invalid token"
